--- a/frontend/get_clientes.html
+++ b/frontend/get_clientes.html
@@ -6,6 +6,10 @@
     <body>
         <h1>Lista de clientes por metodo GET (DOM) </h1>
         <script type="text/javascript" src="get_clientes.js"></script>
+        <a href="post_cliente.html">Insertar nuevo cliente a la tabla</a>
+        <br>
+        <br>
+        <br>
         <table id="tabla_clientes" , border="1">
 
         </table>
