--- a/frontend/put_cliente.html
+++ b/frontend/put_cliente.html
@@ -7,7 +7,7 @@
         <h1>Actualizar un Cliente</h1>
         <br>
         <br>
-        <form id="form_cliente" method="PUT">
+        <form id="form_cliente">
             <label for="nombre"> Nombre </label>
             <br>
             <input type="text" id="nombre">
