--- a/frontend/post_cliente.html
+++ b/frontend/post_cliente.html
@@ -5,7 +5,7 @@
     </header>
     <body>
         <h1>Agregar cliente </h1>
-        <form id="form_cliente" method="POST">
+        <form id="form_cliente">
             <label for="nombre">Nombre</label>
             <input type="text" id="nombre"/>
             <br>
